--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -27,6 +27,9 @@ indices:
       type:
         select: head > meta[name="template"]
         value: attribute(el, "content")
+      publicationType:
+        select: head > meta[name="publication-type"]
+        value: attribute(el, "content")  
       identifier:
         select: head > meta[name="identifier"]
         value: attribute(el, "content")
